<resources>
    <string name="app_name">Keeping fit</string>
    <string name="greetings">Привет!</string>
    <string name="wrt_name">Введите ваше имя</string>
    <string name="name">Имя...</string>
    <string name="btn_continue">Продолжить</string>
    <string name="get_to_know">Узнаем вас получше?</string>
    <string name="type_info">Введите ваши физические показатели</string>
    <string name="age">Возраст...</string>
    <string name="hight">Рост...</string>
    <string name="weight">Вес...</string>
    <string name="f_gender">Жен</string>
    <string name="m_gender">Муж</string>
    <string name="btn_skip">Пропустить</string>
    <string name="training">Тренировки</string>
    <string name="diets">Питание</string>
    <string name="health">Здоровье</string>
    <string name="hands">Руки</string>
    <string name="legs">Ноги</string>
    <string name="back">Спина|Плечи</string>
    <string name="breast">Грудь</string>
    <string name="press">Пресс</string>
    <string name="buttocks">Ягодицы</string>
    <string name="balanced_diet">Сбалансированное</string>
    <string name="weight_loss_diet">Для похудения</string>
    <string name="veg_diet">Вегетарианское</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_age">Ваш возраст:</string>
    <string name="your_weight">Ваш вес:</string>
    <string name="your_hight">Ваш рост:</string>
    <string name="calory_daily_intake">Суточная норма калорий:</string>
    <string name="body_index">Индекс массы тела:</string>
    <string name="update_data">Обновить данные</string>
    <string name="water_balance">Водный баланс</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="drank_howMuch">Вы выпили сегодня:</string>
    <string name="training_1">Тренировка 1</string>
    <string name="training_2">Тренировка 2</string>
    <string name="training_3">Тренировка 3</string>
    <string name="training_4">Тренировка 4</string>
    <string name="training_5">Тренировка 5</string>
    <string name="training_6">Тренировка 6</string>
    <string name="training_7">Тренировка 7</string>
    <string name="time">40-60 мин</string>
    <string name="trainings">Тренировка</string>


</resources>