<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/get_to_know"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/get_to_know"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/type_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_to_know"
        android:layout_marginLeft="82sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/type_info"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_info"
        android:layout_marginHorizontal="82sp"
        android:layout_marginTop="23sp"
        android:background="@color/background"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edUserAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edUserName"
        android:layout_marginHorizontal="82sp"
        android:layout_marginTop="22dp"
        android:background="@color/background"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/age"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edUserHit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edUserAge"
        android:layout_marginHorizontal="82sp"
        android:layout_marginTop="22dp"
        android:background="@color/background"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/hight"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edUserWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edUserHit"
        android:layout_marginHorizontal="82sp"
        android:layout_marginTop="22dp"
        android:background="@color/background"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/weight"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/gender_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edUserWeight"
        android:layout_marginStart="82dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="82dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <EditText
            android:id="@+id/f_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:fontFamily="@font/roboto_thin"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/f_gender"
            android:textAlignment="center"

            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/m_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:fontFamily="@font/roboto_thin"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/m_gender"
            android:textAlignment="center"

            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnСntToMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edUserWeight"
        android:layout_marginHorizontal="84sp"
        android:layout_marginTop="93dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_continue"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSkipToMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnСntToMainMenu"
        android:layout_marginHorizontal="121sp"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/btn_skip"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

</RelativeLayout>