<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/caret_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"

        android:backgroundTint="@color/black">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:minHeight="48dp"

            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/training"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:minHeight="48dp"

            android:text="@string/back"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_below="@id/caret_linear_layout"/>

    <Button
        android:id="@+id/btn_hands_training1"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/line1"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:minHeight="60sp"
        android:text="@string/training_1"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_hands_training2"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/btn_hands_training1"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/training_2"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:minHeight="60sp"/>

    <Button
        android:id="@+id/btn_hands_training3"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/btn_hands_training2"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/training_3"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:minHeight="60sp"/>

    <Button
        android:id="@+id/btn_hands_training4"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/btn_hands_training3"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/training_4"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:minHeight="60sp"/>

    <Button
        android:id="@+id/btn_hands_training5"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/btn_hands_training4"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/training_5"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:minHeight="60sp"/>

    <Button
        android:id="@+id/btn_hands_training6"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/btn_hands_training5"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/training_6"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:minHeight="60sp"/>

    <Button
        android:id="@+id/btn_hands_training7"
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_below="@id/btn_hands_training6"
        android:layout_marginHorizontal="60sp"
        android:layout_marginTop="17sp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/training_7"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:minHeight="60sp"/>

</RelativeLayout>